RESOLVED FIXED102652
[CG][WK2] Assertion in CoordinatedGraphicsLayer::setContentsToImage(WebCore::Image*)
https://bugs.webkit.org/show_bug.cgi?id=102652
Summary [CG][WK2] Assertion in CoordinatedGraphicsLayer::setContentsToImage(WebCore::...
Chris Dumez
Reported 2012-11-19 00:05:39 PST
We hit the following assertion when running compositing/images/truncated-direct-png-image.html: crash log for WebProcess (pid <unknown>): STDOUT: <empty> STDERR: ASSERTION FAILED: newNativeImagePtr STDERR: /home/buildslave-1/webkit-buildslave/efl-linux-64-debug-wk2/build/Source/WebKit2/WebProcess/WebPage/CoordinatedGraphics/CoordinatedGraphicsLayer.cpp(355) : virtual void WebCore::CoordinatedGraphicsLayer::setContentsToImage(WebCore::Image*) STDERR: 1 0x7f1739896923 WebCore::CoordinatedGraphicsLayer::setContentsToImage(WebCore::Image*) STDERR: 2 0x7f1735bc0a95 WebCore::RenderLayerBacking::updateImageContents() STDERR: 3 0x7f1735bc0953 WebCore::RenderLayerBacking::contentChanged(WebCore::ContentChangeType) STDERR: 4 0x7f1735b9b7f4 WebCore::RenderLayer::contentChanged(WebCore::ContentChangeType) STDERR: 5 0x7f1735b38439 WebCore::RenderBoxModelObject::contentChanged(WebCore::ContentChangeType) STDERR: 6 0x7f1735b8df46 WebCore::RenderImage::notifyFinished(WebCore::CachedResource*) STDERR: 7 0x7f173582ad74 WebCore::CachedResource::checkNotify() STDERR: 8 0x7f1735826a5d WebCore::CachedImage::data(WTF::PassRefPtr<WebCore::ResourceBuffer>, bool) STDERR: 9 0x7f17357ed7c6 WebCore::SubresourceLoader::didFinishLoading(double) STDERR: 10 0x7f17357e8acd WebCore::ResourceLoader::didFinishLoading(WebCore::ResourceHandle*, double) STDERR: 11 0x7f17363a601a STDERR: 12 0x7f1730ef6775 STDERR: 13 0x7f1730f0b8dd g_simple_async_result_complete STDERR: 14 0x7f1730f0ba0c STDERR: 15 0x7f173123de53 g_main_context_dispatch STDERR: 16 0x7f17326d0a4e STDERR: 17 0x7f17326cac29 STDERR: 18 0x7f17326cb7b5 STDERR: 19 0x7f17326cbab7 ecore_main_loop_begin STDERR: 20 0x7f173637e0cd WebCore::RunLoop::run() STDERR: 21 0x7f1739902ebb WebProcessMainEfl STDERR: 22 0x4007f4 main STDERR: 23 0x7f1738bdd76d __libc_start_main STDERR: 24 0x400719 This is apparently related to Bug 98456.
Attachments
Patch (2.01 KB, patch)
2012-11-19 00:14 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2012-11-19 00:14:18 PST
WebKit Review Bot
Comment 2 2012-11-19 00:49:21 PST
Comment on attachment 174903 [details] Patch Clearing flags on attachment: 174903 Committed r135124: <http://trac.webkit.org/changeset/135124>
WebKit Review Bot
Comment 3 2012-11-19 00:49:26 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.