[CG][WK2] Assertion in CoordinatedGraphicsLayer::setContentsToImage(WebCore::Image*) https://bugs.webkit.org/show_bug.cgi?id=102652

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-11-19
Reviewed by Kenneth Rohde Christiansen.

Handle null return of nativeImageForCurrentFrame similarly to Chromium
port in r130610. This can happen if there is an error early in the
decoding of an image.

Test: Already covered by compositing/images/truncated-direct-png-image.html

* WebProcess/WebPage/CoordinatedGraphics/CoordinatedGraphicsLayer.cpp:
(WebCore::CoordinatedGraphicsLayer::setContentsToImage):

Canonical link: https://commits.webkit.org/120799@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135124 268f45cc-cd09-0410-ab3c-d52691b4dbfc